[feat] jpa메소드명 수정
메소드명 규칙에 따라 발생하는 오류 수정